# weatherops-backend

./: .env.example  .env.railway  .env.render  .gitignore  API.md  ARCHITECTURE.md  CELERY_RENDER_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  DIAGRAMS.md  Dockerfile  LOCAL_DEVELOPMENT.md  Makefile  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  WeatherOps_API.postman_collection.json  alembic.ini  build.sh  docker-compose.railway.yml  docker-compose.yml  openapi.yaml  pyproject.toml  railway.json  render.yaml  run_migrations.py  start.sh
alembic/: env.py
alembic/versions/: 000_base_tables.py  001_initial_alert_tables.py  002_add_user_preferences.py  003_add_refresh_tokens.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: alerts.py  (+7 more)
app/core/: __init__.py  config.py  exceptions.py  logging.py  redis.py  responses.py  security.py
app/core/cache/: __init__.py  cache_service.py
app/core/channels/: __init__.py  base.py  email.py  sms.py  webhook.py
app/core/integrations/: __init__.py  weather_ai_client.py
app/core/security/: __init__.py  jwt.py  password.py
app/database/: __init__.py  base.py  session.py
app/dependencies/: __init__.py  auth.py
app/models/: __init__.py  alert.py  location.py  refresh_token.py  rule.py  user.py  user_preference.py
app/repositories/: __init__.py  alert_repository.py  location_repository.py  refresh_token_repository.py  rule_repository.py  user_repository.py
app/schemas/: __init__.py  alert.py  auth.py  location.py  rule.py  trees.py  user_preference.py  weather.py
app/services/: __init__.py  alert_service.py  auth_service.py  location_service.py  notification_service.py  rule_engine.py  rule_service.py  tree_service.py  weather_service.py
app/workers/: beat_schedule.py  celery_app.py
app/workers/tasks/: ping.py  weather_monitor.py
docker/: Dockerfile
examples/: alert_system_demo.py
requirements/: base.txt  dev.txt
tests/: conftest.py  test_api_integration.py  test_auth.py  test_automation_engine.py  test_health.py  test_services.py  test_weather_monitor_task.py
