[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherops"
version = "0.1.0"
description = "Event-Driven Weather Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "WeatherOps Team", email = "team@weatherops.com" },
]
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.5.0",
    "redis==5.2.0",
    "celery==5.4.0",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "aiosqlite==0.20.0",
    "sendgrid==6.11.0",
    "twilio==9.3.0",
    "bcrypt==4.1.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "black==24.12.0",
    "ruff==0.8.3",
    "mypy==1.14.1",
    "sqlalchemy[mypy]==2.0.36",
]

[tool.uv]
python-version = "3.12"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
